API_Reference/milvus-sdk-node/v2.4.x/Management/IndexType.md
# IndexType

This is an enumeration that provides the following constants.

## Constants

- **ANNOY** = ANNOY
Sets the index type to ANNOY.

- **AUTOINDEX** = AUTOINDEX
Sets the index type to AUTOINDEX.

- **BIN_FLAT** = BIN_FLAT
Sets the index type to BIN_FLAT.

- **BIN_IVF_FLAT** = BIN_IVF_FLAT
Sets the index type to BIN_IVF_FLAT.

- **DISKANN** = DISKANN
Sets the index type to DISKANN.

- **FLAT** = FLAT
Sets the index type to FLAT.

- **GPU_FLAT** = GPU_FLAT
Sets the index type to GPU_FLAT.

- **GPU_IVF_FLAT** = GPU_IVF_FLAT
Sets the index type to GPU_IVF_FLAT.

- **GPU_IVF_PQ** = GPU_IVF_PQ
Sets the index type to GPU_IVF_PQ.

- **GPU_IVF_SQ8** = GPU_IVF_SQ8
Sets the index type to GPU_IVF_SQ8.

- **HNSW** = HNSW
Sets the index type to HNSW.

- **IVF_FLAT** = IVF_FLAT
Sets the index type to IVF_FLAT.

- **IVF_PQ** = IVF_PQ
Sets the index type to IVF_PQ.

- **IVF_SQ8** = IVF_SQ8
Sets the index type to IVF_SQ8.

- **RAFT_IVF_FLAT** = RAFT_IVF_FLAT
Sets the index type to RAFT_IVF_FLAT.

- **RAFT_IVF_PQ** = RAFT_IVF_PQ
Sets the index type to RAFT_IVF_PQ.

- **STL_SORT** = STL_SORT
Sets the index type to STL_SORT.

- **ScaNN** = ScaNN
Sets the index type to ScaNN.

- **TRIE** = Trie
Sets the index type to Trie.

- **INVERTED** = 'INVERTED'

    Sets the index type to INVERTED.